# BenchTGNN

./: README.md  collect_logs.sh  collect_runtime_sutlej.sh  down.sh  download.sh  download_and_process.sh  gen_syn_data.sh  plot.sh  preprocess.sh  process_benchtemp.sh  requirements.txt  run_all.sh  run_all_REDDIT.sh  run_all_nodes.sh  run_memory_test.sh  run_parallel_ganges.sh  run_parallel_ganges_scan10.sh  run_parallel_sutlej.sh  test_history.sh  test_time.sh
config/: TGAT_re_none.yml  TGAT_uni_none.yml  idx.yml  revise_config.py
config_old2/: revise_config.py
models/: summarize.py
plotting/: collect_node_embs.sh  run_all_node.py
src/: analyze_graph.py  analyze_graph_recurrence_analysis.ipynb  analyze_graph_recurrence_analysis.py  analyze_graph_recurrence_analysis_syn.ipynb  analyze_graph_recurrence_analysis_time.py  analyze_graph_session.ipynb  analyze_graph_session.py  analyze_graph_session_density.py  analyze_graph_session_log.py  collect_dataset_statistics.py  collect_logs.py  collect_logs_all.py  collect_logs_scan.py  collect_tb.py  collect_time_partial.py  dataloader.py  draw_mrr_neighbors_curve.py  eval.py  gen_graph.py  gen_syn_dataset.py  layers.py  model.py  npy2pt.py  plot_aggregator.ipynb  plot_deg_distribution.py  plot_memory_datasets.py  plot_spl_saturate.ipynb  plot_spl_strategy.py  plot_tb.py  preprocess.py  preprocess_benchtemp.py  put_all_images_together.py  run_test.py  (+8 more)
trialspace/2023-11-18_tgat_wiki_mem/temporal_sampling/: CMakeLists.txt
trialspace/2023-11-18_tgat_wiki_mem/temporal_sampling/src/temporal_sampling.egg-info/: top_level.txt
(+353 files in other folders)
